log
Fri, May 16, 2025  9:45:08 PM: 
 sudoku.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
3f0e54c
Fri, May 16, 2025  9:47:50 PM: 
 sudoku.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:60:15: error: implicit declaration of function 'addToList' [-Werror=implicit-function-declaration]
               addToList(list,newNode);
               ^~~~~~~~~
cc1.exe: all warnings being treated as errors
8f9d7df
Fri, May 16, 2025  9:49:50 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e17a6ef
Fri, May 16, 2025  9:58:14 PM: 
 sudoku.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:17: error: implicit declaration of function 'is_valid' [-Werror=implicit-function-declaration]
             if (is_valid(newNode)){
                 ^~~~~~~~
sudoku.c: In function 'is_valid':
sudoku.c:73:13: error: unused variable 'num' [-Werror=unused-variable]
         int num = n->sudo[i][j];
             ^~~
sudoku.c:69:28: error: unused variable 'box' [-Werror=unused-variable]
   int fila[10], colum[10], box[10];
                            ^~~
sudoku.c:69:17: error: unused variable 'colum' [-Werror=unused-variable]
   int fila[10], colum[10], box[10];
                 ^~~~~
sudoku.c:69:7: error: unused variable 'fila' [-Werror=unused-variable]
   int fila[10], colum[10], box[10];
       ^~~~
cc1.exe: all warnings being treated as errors
5f99584
Fri, May 16, 2025  9:58:22 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:17: error: implicit declaration of function 'is_valid' [-Werror=implicit-function-declaration]
             if (is_valid(newNode)){
                 ^~~~~~~~
sudoku.c: In function 'is_valid':
sudoku.c:73:13: error: unused variable 'num' [-Werror=unused-variable]
         int num = n->sudo[i][j];
             ^~~
sudoku.c:69:28: error: unused variable 'box' [-Werror=unused-variable]
   int fila[10], colum[10], box[10];
                            ^~~
sudoku.c:69:17: error: unused variable 'colum' [-Werror=unused-variable]
   int fila[10], colum[10], box[10];
                 ^~~~~
sudoku.c:69:7: error: unused variable 'fila' [-Werror=unused-variable]
   int fila[10], colum[10], box[10];
       ^~~~
cc1.exe: all warnings being treated as errors
84d1178
Fri, May 16, 2025 10:00:40 PM: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:17: error: implicit declaration of function 'is_valid' [-Werror=implicit-function-declaration]
             if (is_valid(newNode)){
                 ^~~~~~~~
cc1.exe: all warnings being treated as errors
c4efc96
Fri, May 16, 2025 10:02:37 PM: 
 sudoku.c | 42 +++++++++++++++++++++---------------------
 1 file changed, 21 insertions(+), 21 deletions(-)
 tests:  0|5
total_score: 0/70
634caff
Fri, May 16, 2025 10:05:27 PM: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
74003c8
Fri, May 16, 2025 10:10:31 PM: 
 sudoku.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:56:23: error: 'i' undeclared (first use in this function)
     int num = n->sudo[i][j];
                       ^
sudoku.c:56:23: note: each undeclared identifier is reported only once for each function it appears in
a785630
Fri, May 16, 2025 10:11:46 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
d1099f5
Fri, May 16, 2025 10:17:59 PM: 
 sudoku.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:51:7: error: redeclaration of 'fila' with no linkage
   int fila[10], colum[10], box[10];
       ^~~~
sudoku.c:47:7: note: previous definition of 'fila' was here
   int fila[10] = {0};
       ^~~~
sudoku.c:51:17: error: redeclaration of 'colum' with no linkage
   int fila[10], colum[10], box[10];
                 ^~~~~
sudoku.c:48:7: note: previous definition of 'colum' was here
   int colum[10] = {0};
       ^~~~~
sudoku.c:51:28: error: redeclaration of 'box' with no linkage
   int fila[10], colum[10], box[10];
                            ^~~
sudoku.c:49:7: note: previous definition of 'box' was here
   int box[10] = {0};
       ^~~
3d11799
Fri, May 16, 2025 10:18:46 PM: 
 sudoku.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  0|5
total_score: 0/70
515807a
Fri, May 16, 2025 10:20:03 PM: 
 sudoku.c | 43 ++++++++++++++++++++++---------------------
 1 file changed, 22 insertions(+), 21 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:17: error: implicit declaration of function 'is_valid' [-Werror=implicit-function-declaration]
             if (is_valid(newNode)){
                 ^~~~~~~~
cc1.exe: all warnings being treated as errors
34e7b96
Fri, May 16, 2025 10:21:37 PM: 
 sudoku.c | 44 ++++++++++++++++++++++----------------------
 1 file changed, 22 insertions(+), 22 deletions(-)
 tests:  0|5
total_score: 0/70
9418502
Fri, May 16, 2025 10:22:30 PM: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
4cbd0c8
Fri, May 16, 2025 10:22:47 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
4476157
Fri, May 16, 2025 10:25:03 PM: 
 sudoku.c | 16 +++++++++++-----
 1 file changed, 11 insertions(+), 5 deletions(-)
 tests:  0|5
total_score: 0/70
6beb95f
Fri, May 16, 2025 10:25:15 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
713c85d
Fri, May 16, 2025 10:29:56 PM: 
 sudoku.c | 17 ++++++++++++-----
 1 file changed, 12 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:49:11: error: expected expression before '[' token
   int box[[9]10] = {0};
           ^
sudoku.c:56:45: error: 'box' undeclared (first use in this function)
         if(fila[i][num] || colum[i][num] || box[submatriz][num]){
                                             ^~~
sudoku.c:56:45: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:55:13: error: variable 'submatriz' set but not used [-Werror=unused-but-set-variable]
         int submatriz = (i / 3) * 3 + (j / 3);
             ^~~~~~~~~
cc1.exe: all warnings being treated as errors
aabfc75
Fri, May 16, 2025 10:30:31 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
0583006
Fri, May 16, 2025 10:33:37 PM: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  7|1
total_score: 55/70
bb25d51
Fri, May 16, 2025 10:38:13 PM: 
 sudoku.c | 21 +++------------------
 1 file changed, 3 insertions(+), 18 deletions(-)
 tests:  6|2
total_score: 45/70
cb62911
Fri, May 16, 2025 10:42:50 PM: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:105:14: error: 'n' undeclared (first use in this function)
   push(stack,n);
              ^
sudoku.c:105:14: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:106:4: error: 'count' undeclared (first use in this function)
   *count = 0;
    ^~~~~
sudoku.c:109:18: error: void value not ignored as it ought to be
     Node* temp = pop(stack);
                  ^~~
sudoku.c:118:24: error: implicit declaration of function 'size' [-Werror=implicit-function-declaration]
     for(int i = 0; i < size(nodosADJ); i++){
                        ^~~~
sudoku.c:119:23: error: implicit declaration of function 'getAT' [-Werror=implicit-function-declaration]
       adjacenteNodo = getAT(nodosADJ,i);
                       ^~~~~
sudoku.c:119:21: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
       adjacenteNodo = getAT(nodosADJ,i);
                     ^
cc1.exe: all warnings being treated as errors
d5e3e99
Fri, May 16, 2025 10:46:01 PM: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:105:14: error: 'n' undeclared (first use in this function)
   push(stack,n);
              ^
sudoku.c:105:14: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:106:4: error: 'count' undeclared (first use in this function)
   *count = 0;
    ^~~~~
sudoku.c:109:18: error: void value not ignored as it ought to be
     Node* temp = pop(stack);
                  ^~~
sudoku.c:117:35: error: dereferencing pointer to incomplete type 'List {aka struct List}'
     Node* adjacenteNodo = nodosADJ->head;
                                   ^~
sudoku.c:120:36: error: 'Node {aka struct <anonymous>}' has no member named 'next'
       adjacenteNodo = adjacenteNodo->next;
                                    ^~
62935a4
